--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,8 +1,15 @@
 .menu-header {
     margin: 5%;
     font-weight: bold;
+    font-size: 14px;
 }
 
 .menu-item {
-    margin: 15%;
+    margin: 12%;
+    padding-bottom: 100px;
+    white-space: nowrap;
+}
+
+.nav-menu {
+    line-height: 1.8;
 }
