--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,51 @@
 body {
-    margin: 0;
     padding: 0;
     height: 100%;
     max-height: 100%;
     background: rgba(233, 235, 238, 0.932);
-    font-family: 'PT Mono', monospace;
-    font-size: 12px;
+    font-family: 'Secular One', sans-serif;
+    font-size: 14px;
 }
 
 head title {
     text-align: center;
+}
+
+.scrollableTable {
+    overflow: auto;
+    height: 200px;
+    display:block;
+}
+
+
+.sidebar-nav {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 250px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    /*background-color: #111; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+}
+
+.sidebar-nav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+}
+
+.sidebar-nav .title {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 30px;
+    color: #111111;
+    display: block;
+}
+
+.sidebar-nav a:hover {
+    color: #f1f1f1;
 }
