--- a/styles/nav.css
+++ b/styles/nav.css
@@ -8,8 +8,21 @@
     margin: 12%;
     padding-bottom: 100px;
     white-space: nowrap;
+    font-size: 12px;
+}
+
+.menu-item-text:hover {
+    font-size:13px;
+    background-color: rgb(255, 255, 173);
+}
+
+a, a:visited {
+    color: pink;
 }
 
 .nav-menu {
     line-height: 1.5;
+    color: #00c2eb;
+    background-color: #0d0d0d;
+    /* background-color: whitesmoke; */
 }
