--- a/boshi-olympics/olympics.css
+++ b/boshi-olympics/olympics.css
@@ -423,7 +423,7 @@ hr {
     text-shadow: var(--header-green) 1px 1px 2px;
 }
 
-#youAreCheeringFor {
+.neonTextLabel {
     font-weight: 800;
     font-size: 20px;
     color: var(--link-purple);
@@ -436,5 +436,4 @@ hr {
         0 0 92px var(--background-pink),
         0 0 102px var(--background-pink),
         0 0 151px var(--background-pink);
-    }
 }
