--- a/boshi-olympics/olympics.css
+++ b/boshi-olympics/olympics.css
@@ -437,3 +437,9 @@ hr {
         0 0 102px var(--background-pink),
         0 0 151px var(--background-pink);
 }
+
+#racerTypeDescription {
+    color: var(--medium-gray);
+    font-weight: 500;
+    margin-top: 10px;
+}
